Make swap hands type agnostic